--- a/inspec-tests/inspec.yml
+++ b/inspec-tests/inspec.yml
@@ -10,9 +10,9 @@ supports:
   platform: os
 
 inputs:
-  - name: docker_container_name
-    description: The name of the container to test
-    type: string
   - name: firstspirit_version
     description: The expected firstspirit version
     type: string
+  - name: firstspirit_version_short
+    description: The expected short firstspirit version
+    type: numeric
