Fix missing $FS_VERSION env variable

--- a/jdk11/Dockerfile
+++ b/jdk11/Dockerfile
@@ -55,7 +55,7 @@ ARG HEALTHCHECK_RETRIES
 
 ENV FS_BASEDIR="${FS_BASE_DIRECTORY}" \
     FS_INSTALLDIR="${FS_INSTALL_DIRECTORY}" \
-    FS_VERSION="${FS_VERSION}" \
+    FS_VERSION="${IMAGE_VERSION}" \
     FS_INSTALL_VERSION="${FS_INSTALL_VERSION}" \
     FS_JAVA_HOME=$JAVA_HOME
 
