updated hashes, image version and tags for jdk17

--- a/jdk17/Dockerfile
+++ b/jdk17/Dockerfile
@@ -1,6 +1,6 @@
 ARG IMAGE_CREATED="2023-10-27T9:00:00CEST"
-ARG IMAGE_VERSION="5.2.231008"
-ARG IMAGE_VERSION_SHORT="2023.10"
+ARG IMAGE_VERSION="5.2.231010"
+ARG IMAGE_VERSION_SHORT="2023.10 Hotfix CVE-2023-4863"
 ARG FS_DOWNLOAD_SERVER
 ARG FS_DOWNLOAD_SERVER_USERNAME
 ARG FS_DOWNLOAD_SERVER_PASSWORD
