updated short image version

--- a/jdk11/Dockerfile
+++ b/jdk11/Dockerfile
@@ -1,6 +1,6 @@
 ARG IMAGE_CREATED="2023-10-26T20:00:00CEST"
 ARG IMAGE_VERSION="5.2.230817"
-ARG IMAGE_VERSION_SHORT="2023.8"
+ARG IMAGE_VERSION_SHORT="2023.8 Hotfix CVE-2023-4863"
 ARG FS_DOWNLOAD_SERVER
 ARG FS_DOWNLOAD_SERVER_USERNAME
 ARG FS_DOWNLOAD_SERVER_PASSWORD
