updated docker file, updated versions and hashes

--- a/jdk17/Dockerfile
+++ b/jdk17/Dockerfile
@@ -1,10 +1,10 @@
-ARG IMAGE_CREATED="2024-03-22T15:00:00CEST"
-ARG IMAGE_VERSION="5.2.240312"
-ARG IMAGE_VERSION_SHORT="2024.3"
+ARG IMAGE_CREATED="2024-04-04T11:00:00CEST"
+ARG IMAGE_VERSION="5.2.240408"
+ARG IMAGE_VERSION_SHORT="2024.4"
 ARG FS_DOWNLOAD_SERVER
 ARG FS_DOWNLOAD_SERVER_USERNAME
 ARG FS_DOWNLOAD_SERVER_PASSWORD
-ARG FS_DOWNLOAD_SERVER_NAME="fs-isolated-server.jar"
+ARG FS_DOWNLOAD_SERVER_NAME="fs-isolated-server-5.2.240408.jar"
 ARG FS_DOWNLOAD_INSTALL_NAME="fs-install-3.0.8.tar.gz"
 ARG FS_BASE_DIRECTORY="/opt/firstspirit5"
 ARG FS_INSTALL_DIRECTORY="/install/firstspirit5"
@@ -32,7 +32,7 @@ RUN apt-get update && apt-get install curl jq -y && \
     echo "${IMAGE_VERSION}" >> /tmp/firstspirit5/.version
 
 
-FROM docker.io/eclipse-temurin:17-jdk@sha256:e8d451f3b5aa6422c2b00bb913cb8d37a55a61934259109d945605c5651de9a6 AS jdk
+FROM docker.io/eclipse-temurin:17-jdk@sha256:05723aa44185ea767a489a3a3a531053ce968ac47545878c15b6cd3e4bab0143 AS jdk
 
 ENV LANG="de_DE.UTF-8" \
     LANGUAGE="de_DE.UTF-8"
