Update Dockerfile and scripts for streamlined build process
Reduced the number of commands required to build Docker images and updated version handling for dependencies. Enhanced the Dockerfile with consolidated RUN commands and adjusted the banner script to dynamically insert version details in the banner.txt file.

--- a/jdk17/Dockerfile
+++ b/jdk17/Dockerfile
@@ -2,12 +2,12 @@ ARG IMAGE_CREATED="2023-10-27T9:00:00CEST"
 ARG IMAGE_VERSION="5.2.231010"
 ARG IMAGE_VERSION_SHORT="2023.10"
 ARG IMAGE_VERSION_HASH="d75ac607"
-ARG IMAGE_VERSION_INSTALL="3.0.6"
+ARG IMAGE_VERSION_INSTALL="3.0.7"
 ARG FS_DOWNLOAD_SERVER
 ARG FS_DOWNLOAD_SERVER_USERNAME
 ARG FS_DOWNLOAD_SERVER_PASSWORD
 ARG FS_DOWNLOAD_SERVER_NAME="fs-isolated-server.jar"
-ARG FS_DOWNLOAD_INSTALL_NAME="fs-install-3.0.6.tar.gz"
+ARG FS_DOWNLOAD_INSTALL_NAME="fs-install.tar.gz"
 ARG FS_BASE_DIRECTORY="/opt/firstspirit5"
 ARG FS_INSTALL_DIRECTORY="/install/firstspirit5"
 ARG FS_DEBUG_PORT="*:8585"
@@ -15,7 +15,9 @@ ARG FS_DEBUG_PORT="*:8585"
 FROM docker.io/ubuntu:noble@sha256:8a37d68f4f73ebf3d4efafbcf66379bf3728902a8038616808f04e34a9ab63ee AS install
 # Reuse the global variables
 ARG IMAGE_VERSION
+ARG IMAGE_VERSION_INSTALL
 ARG IMAGE_VERSION_SHORT
+ARG IMAGE_VERSION_HASH
 ARG FS_DOWNLOAD_SERVER
 ARG FS_DOWNLOAD_SERVER_USERNAME
 ARG FS_DOWNLOAD_SERVER_PASSWORD
@@ -24,13 +26,14 @@ ARG FS_DOWNLOAD_INSTALL_NAME
 
 COPY /config /tmp
 
-RUN apt-get update && apt-get install curl -y
 WORKDIR /tmp
-RUN curl -Sf -u "${FS_DOWNLOAD_SERVER_USERNAME}:${FS_DOWNLOAD_SERVER_PASSWORD}" -o "${FS_DOWNLOAD_SERVER_NAME}" "${FS_DOWNLOAD_SERVER}/all-mvn-release-external-e-spirit-do/de/espirit/firstspirit/fs-isolated-server/${IMAGE_VERSION}/fs-isolated-server-${IMAGE_VERSION}.jar"
-RUN curl -Sf -u "${FS_DOWNLOAD_SERVER_USERNAME}:${FS_DOWNLOAD_SERVER_PASSWORD}" -o "${FS_DOWNLOAD_INSTALL_NAME}" "${FS_DOWNLOAD_SERVER}/all-mvn-release-external-e-spirit-do/de/espirit/firstspirit/fs-install/${IMAGE_VERSION_INSTALL}/fs-install-${IMAGE_VERSION_INSTALL}.tar.gz"
-RUN tar zxvf /tmp/${FS_DOWNLOAD_INSTALL_NAME} -C /tmp/ && \
+
+RUN apt-get update && apt-get install curl -y && \
+    curl -Sf -u "${FS_DOWNLOAD_SERVER_USERNAME}:${FS_DOWNLOAD_SERVER_PASSWORD}" -o "${FS_DOWNLOAD_SERVER_NAME}" "${FS_DOWNLOAD_SERVER}/all-mvn-release-external-e-spirit-do/de/espirit/firstspirit/fs-isolated-server/${IMAGE_VERSION}/fs-isolated-server-${IMAGE_VERSION}.jar" && \
+    curl -Sf -u "${FS_DOWNLOAD_SERVER_USERNAME}:${FS_DOWNLOAD_SERVER_PASSWORD}" -o "${FS_DOWNLOAD_INSTALL_NAME}" "${FS_DOWNLOAD_SERVER}/all-mvn-release-external-e-spirit-do/de/espirit/firstspirit/fs-install/${IMAGE_VERSION_INSTALL}/fs-install-${IMAGE_VERSION_INSTALL}.tar.gz" && \
+    tar zxvf /tmp/${FS_DOWNLOAD_INSTALL_NAME} -C /tmp/ && \
     rm /tmp/${FS_DOWNLOAD_INSTALL_NAME} && \
-    echo "${IMAGE_VERSION}" >> /tmp/firstspirit5/.version
+    echo "${IMAGE_VERSION}_${IMAGE_VERSION_HASH}" >> /tmp/firstspirit5/.version
 
 
 FROM docker.io/eclipse-temurin:17-noble@sha256:e65ed1ffbce778bc9d80460d49e7de1395cbb7cbd3a271d2021cc90040f98f80 AS jdk
@@ -47,6 +50,8 @@ FROM jdk AS base
 ARG IMAGE_CREATED
 ARG IMAGE_VERSION
 ARG IMAGE_VERSION_SHORT
+ARG IMAGE_VERSION_INSTALL
+ARG IMAGE_VERSION_HASH
 ARG FS_DOWNLOAD_SERVER_NAME
 ARG FS_BASE_DIRECTORY
 ARG FS_INSTALL_DIRECTORY
@@ -58,6 +63,8 @@ ARG HEALTHCHECK_RETRIES
 ENV FS_BASEDIR="${FS_BASE_DIRECTORY}" \
     FS_INSTALLDIR="${FS_INSTALL_DIRECTORY}" \
     FS_VERSION="${IMAGE_VERSION}" \
+    FS_VERSION_SHORT="${IMAGE_VERSION_SHORT}"\
+    FS_VERSION_HASH="${IMAGE_VERSION_HASH}" \
     IMAGE_VERSION_INSTALL="${IMAGE_VERSION_INSTALL}" \
     FS_JAVA_HOME=$JAVA_HOME
 
@@ -67,7 +74,7 @@ LABEL org.opencontainers.image.base.name="eclipse-temurin:17-jdk" \
     org.opencontainers.image.description="FirstSpirit in a Container" \
     org.opencontainers.image.licenses="Apache-2.0" \
     org.opencontainers.image.title="FirstSpirit" \
-    org.opencontainers.image.version=${IMAGE_VERSION}
+    org.opencontainers.image.version=${IMAGE_VERSION}_${IMAGE_VERSION_HASH}
 
 HEALTHCHECK --interval="30s" \
     --timeout="3s" \
