53 Use env variable to accept license

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,7 @@ env:
   FS_DOWNLOAD_SERVER: ${{ secrets.FS_DOWNLOAD_SERVER }}
   FS_DOWNLOAD_SERVER_USERNAME: ${{ secrets.FS_DOWNLOAD_SERVER_USERNAME }}
   FS_DOWNLOAD_SERVER_PASSWORD: ${{ secrets.FS_DOWNLOAD_SERVER_PASSWORD }}
+  CHEF_LICENSE: accept-silent
 
 jobs:
 
