--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "develop", "53-*" ]
 
 env:
   FS_DOWNLOAD_SERVER: ${{ secrets.FS_DOWNLOAD_SERVER }}
