--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,6 @@ env:
   FS_DOWNLOAD_SERVER: ${{ secrets.FS_DOWNLOAD_SERVER }}
   FS_DOWNLOAD_SERVER_USERNAME: ${{ secrets.FS_DOWNLOAD_SERVER_USERNAME }}
   FS_DOWNLOAD_SERVER_PASSWORD: ${{ secrets.FS_DOWNLOAD_SERVER_PASSWORD }}
-  CHEF_LICENSE: accept-silent
 
 jobs:
 
@@ -30,7 +29,7 @@ jobs:
     - name: Start container for test
       run: container_id=$(docker run -d my-image-name:jdk17) && while [[ "$(docker inspect -f '{{.State.Health.Status}}' $container_id)" != "healthy" ]]; do sleep 1; done && echo "Container $container_id is now healthy!" && echo "CONTAINER_ID=$container_id" >> $GITHUB_ENV
     - name: Run inSpec Tests
-      run:  inspec exec ./inspec-tests --input firstspirit_version=${{ env.IMAGE_VERSION }} firstspirit_version_short=${{ env.IMAGE_VERSION_SHORT }} -t docker://${{ env.CONTAINER_ID }} --chef-license=accept --reporter junit2:junit-test.xml
+      run:  inspec exec ./inspec-tests --input firstspirit_version=${{ env.IMAGE_VERSION }} firstspirit_version_short=${{ env.IMAGE_VERSION_SHORT }} -t docker://${{ env.CONTAINER_ID }} --chef-license accept --reporter junit2:junit-test.xml
     - name: Clean up container
       run: docker stop ${{ env.CONTAINER_ID }} && docker rm ${{ env.CONTAINER_ID }}
     - name: Publish Test Report
