53 Use last oss version

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,10 +20,11 @@ jobs:
     - name: Create variables file
       run: grep 'ARG IMAGE_VERSION=' -m1 jdk17/Dockerfile | sed 's/ARG IMAGE_VERSION="\(.*\)"/IMAGE_VERSION=\1/' >> $GITHUB_ENV && grep 'ARG IMAGE_VERSION_SHORT=' -m1 jdk17/Dockerfile | sed 's/ARG IMAGE_VERSION_SHORT="\(.*\)"/IMAGE_VERSION_SHORT=\1/' >> $GITHUB_ENV
     - name: install chef
-      uses: actionshub/chef-install@2.0.4
+      uses: actionshub/chef-install@main
       with:
         channel: stable
         project: inspec
+        version: 4.3.2
     - name: Build the Docker image
       run: docker build . --file jdk17/Dockerfile --build-arg FS_DOWNLOAD_SERVER=${{ env.FS_DOWNLOAD_SERVER }} --build-arg FS_DOWNLOAD_SERVER_USERNAME=${{ env.FS_DOWNLOAD_SERVER_USERNAME }} --build-arg FS_DOWNLOAD_SERVER_PASSWORD=${{ env.FS_DOWNLOAD_SERVER_PASSWORD }} --build-arg IMAGE_CREATED=$(date +%FT%T%Z) --tag my-image-name:jdk17
     - name: Start container for test
