--- a/jdk17/Dockerfile
+++ b/jdk17/Dockerfile
@@ -1,7 +1,6 @@
 ARG IMAGE_CREATED="2024-09-13T14:00:00CEST"
 ARG IMAGE_VERSION="5.2.240509"
 ARG IMAGE_VERSION_SHORT="2024.5"
-ARG IMAGE_VERSION_HASH=""
 ARG IMAGE_VERSION_INSTALL="3.0.8"
 ARG FS_DOWNLOAD_SERVER
 ARG FS_DOWNLOAD_SERVER_USERNAME
@@ -17,7 +16,6 @@ FROM docker.io/ubuntu:noble@sha256:8a37d68f4f73ebf3d4efafbcf66379bf3728902a80386
 ARG IMAGE_VERSION
 ARG IMAGE_VERSION_INSTALL
 ARG IMAGE_VERSION_SHORT
-ARG IMAGE_VERSION_HASH
 ARG FS_DOWNLOAD_SERVER
 ARG FS_DOWNLOAD_SERVER_USERNAME
 ARG FS_DOWNLOAD_SERVER_PASSWORD
@@ -33,7 +31,7 @@ RUN apt-get update && apt-get install curl -y && \
     curl -Sf -u "${FS_DOWNLOAD_SERVER_USERNAME}:${FS_DOWNLOAD_SERVER_PASSWORD}" -o "${FS_DOWNLOAD_INSTALL_NAME}" "${FS_DOWNLOAD_SERVER}/all-mvn-release-external-e-spirit-do/de/espirit/firstspirit/fs-install/${IMAGE_VERSION_INSTALL}/fs-install-${IMAGE_VERSION_INSTALL}.tar.gz" && \
     tar zxvf /tmp/${FS_DOWNLOAD_INSTALL_NAME} -C /tmp/ && \
     rm /tmp/${FS_DOWNLOAD_INSTALL_NAME} && \
-    echo "${IMAGE_VERSION}_${IMAGE_VERSION_HASH}" >> /tmp/firstspirit5/.version
+    echo "${IMAGE_VERSION}" >> /tmp/firstspirit5/.version
 
 
 FROM docker.io/eclipse-temurin:17-noble@sha256:e65ed1ffbce778bc9d80460d49e7de1395cbb7cbd3a271d2021cc90040f98f80 AS jdk
@@ -51,7 +49,6 @@ ARG IMAGE_CREATED
 ARG IMAGE_VERSION
 ARG IMAGE_VERSION_SHORT
 ARG IMAGE_VERSION_INSTALL
-ARG IMAGE_VERSION_HASH
 ARG FS_DOWNLOAD_SERVER_NAME
 ARG FS_BASE_DIRECTORY
 ARG FS_INSTALL_DIRECTORY
@@ -64,7 +61,6 @@ ENV FS_BASEDIR="${FS_BASE_DIRECTORY}" \
     FS_INSTALLDIR="${FS_INSTALL_DIRECTORY}" \
     FS_VERSION="${IMAGE_VERSION}" \
     FS_VERSION_SHORT="${IMAGE_VERSION_SHORT}"\
-    FS_VERSION_HASH="${IMAGE_VERSION_HASH}" \
     IMAGE_VERSION_INSTALL="${IMAGE_VERSION_INSTALL}" \
     FS_JAVA_HOME=$JAVA_HOME
 
@@ -74,7 +70,7 @@ LABEL org.opencontainers.image.base.name="eclipse-temurin:17-jdk" \
     org.opencontainers.image.description="FirstSpirit in a Container" \
     org.opencontainers.image.licenses="Apache-2.0" \
     org.opencontainers.image.title="FirstSpirit" \
-    org.opencontainers.image.version=${IMAGE_VERSION}_${IMAGE_VERSION_HASH}
+    org.opencontainers.image.version=${IMAGE_VERSION}
 
 HEALTHCHECK --interval="30s" \
     --timeout="3s" \
