--- a/jdk21/Dockerfile
+++ b/jdk21/Dockerfile
@@ -1,6 +1,6 @@
-ARG IMAGE_CREATED="2025-08-12T14:00:00CEST"
-ARG IMAGE_VERSION="5.2.250812"
-ARG IMAGE_VERSION_SHORT="2025.8_hotfix"
+ARG IMAGE_CREATED="2025-08-20T14:00:00CEST"
+ARG IMAGE_VERSION="5.2.250909"
+ARG IMAGE_VERSION_SHORT="2025.9"
 ARG IMAGE_VERSION_INSTALL="3.1.3"
 
 ARG FS_DOWNLOAD_SERVER
